cd/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: techtalks-app
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: app-nestjs
